# libicq2000

./: ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  config.h.in  configure.in  doxyfile.conf  libicq2000-config.1  libicq2000-config.in  libicq2000.m4  libicq2000.pc.in
debian/: README  changelog  control  copyright  libicq2000-dev.files  libicq2000-dev.links  libicq2000-dev.manpages  libicq2000-doc.files  libicq2000-doc.links  libicq2000.docs  libicq2000.files  rules
examples/: Makefile.am  PipeExec.cpp  PipeExec.h  Select.cpp  Select.h  shell.cpp  shell.h
libicq2000/: Cache.h  Capabilities.h  Client.h  Contact.h  ContactList.h  ContactTree.h  DCCache.h  DirectClient.h  ICBMCookieCache.h  ICQ.h  Makefile.am  MessageHandler.h  RequestIDCache.h  SMTPClient.h  SNAC-BOS.h  SNAC-BUD.h  SNAC-GEN.h  SNAC-MSG.h  SNAC-SBL.h  SNAC-SRV.h  SNAC-UIN.h  SNAC-base.h  SNAC.h  SeqNumCache.h  SocketClient.h  TLV.h  Translator.h  UserInfoBlock.h  Xml.h  buffer.h  constants.h  custom_marshal.h  events.h  exceptions.h  ref_ptr.h  sigslot.h  socket.h  userinfoconstants.h  userinfohelpers.h  version.h.in
src/: Cache.h  Capabilities.cpp  Client.cpp  Client.h  Contact.cpp  Contact.h  ContactList.cpp  ContactList.h  ContactTree.cpp  DCCache.h  DirectClient.cpp  DirectClient.h  FileTransferClient.cpp  FileTransferClient.h  ICBMCookie.cpp  ICBMCookie.h  ICBMCookieCache.h  ICQ.cpp  ICQ.h  Makefile  Makefile.am  Makefile.in  MessageHandler.cpp  MessageHandler.h  RequestIDCache.h  SMTPClient.cpp  SMTPClient.h  SNAC-BOS.cpp  SNAC-BUD.cpp  SNAC-BUD.h  SNAC-GEN.cpp  SNAC-GEN.h  SNAC-LOC.cpp  SNAC-LOC.h  SNAC-MSG.cpp  SNAC-MSG.h  SNAC-SBL.cpp  SNAC-SRV.cpp  SNAC-SRV.h  SNAC-UIN.cpp  (+31 more)
